--- a/src/FTTBlazor.Client/Pages/About/Select.razor
+++ b/src/FTTBlazor.Client/Pages/About/Select.razor
@@ -10,20 +10,20 @@
     enum EnumPokemons
     {
         Nenhum,
-        Pikachu = 1,
-        Bulbasaur,
-        Charmander,
-        Squirtle
+        Luiz = 1,
+        Paulo,
+        Jhonatan,
+        Thiago
     }
 
     EnumPokemons enumValue;
 
     string[] ListPokemons = new string[]
             {
-        "Pikachu",
-        "Bulbasaur",
-        "Charmander",
-        "Squirtle"
+        "Luiz",
+        "Jhonatan",
+        "Paulo",
+        "Thiago"
             };
 
     string stringValue { get; set; }
