--- a/src/FTTBlazor.Client/Pages/About/Crud.razor
+++ b/src/FTTBlazor.Client/Pages/About/Crud.razor
@@ -64,7 +64,7 @@
     </div>
 
     <div class="mdl-cell--12-col">
-        <h4>Parametros do <span style="font-weight:bold;">FTTCrud</span></h4>
+        <h4>Parameters <span style="font-weight:bold;">FTTCrud</span></h4>
         <h6><span style="font-weight:bold;">ModalContent:</span> Modal content</h6>
         <h6><span style="font-weight:bold;">Filter:</span> Data filter</h6>
         <h6><span style="font-weight:bold;">OnBeforeAdd:</span> Call event after creating an item</h6>
