--- a/src/FTTBlazor.Client/Pages/About/Toaster.razor
+++ b/src/FTTBlazor.Client/Pages/About/Toaster.razor
@@ -45,13 +45,13 @@
     </div>
 
     <div class="mdl-cell--12-col">
-        <h4>Codigo usado</h4>
+        <h4>In the code</h4>
         <h6>The following image is an example on how to implement the dialog component in your system</h6>
         <img src="../img/about/toaster.png" />
     </div>
 
     <div class="mdl-cell--12-col">
-        <h4><span style="font-weight:bold;">ShowToast</span>Parameters</h4>
+        <h4>Parameters <span style="font-weight:bold;">FTTToaster</span></h4>
         <h6><span style="font-weight:bold;">Message:</span> Message that will be displayed when loading the Toast component</h6>
         <h6><span style="font-weight:bold;">ToastEnum:</span> Notification type. The accepted notification types are:
             <ul>
